--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     </head>
     <body>
             <img class="contain" img src=./meshYEG-Logo.png alt="MeshYEG">
-            <h1 class="font-style">Providing Outdoor Internet Access to Every Corner of Edmonton</h1>
+            <h1 class="font-style"></h1>
     </body>
 </html>
